--- a/MyCity4Kids/MyCity4Kids/res/layout/change_password_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/change_password_tab_fragment.xml
@@ -4,17 +4,71 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        app:theme="@style/ToolbarTheme"
+        app:titleTextAppearance="@style/ToolbarTheme.Title">
+
+        <RelativeLayout
+            android:id="@+id/toolbarRelativeLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible">
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/toolbarTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="@string/app_settings.toolbar.title"
+                android:textColor="@color/app_settings.toolbar.title"
+                android:textSize="20sp"
+                app:fontName="oswald_regular.ttf" />
+
+            <ImageView
+                android:id="@+id/searchAllImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:paddingBottom="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="10dp"
+                android:paddingTop="5dp"
+                android:src="@drawable/ic_search" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.Toolbar>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
         android:orientation="vertical"
         android:paddingLeft="20dp"
         android:paddingRight="20dp">
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/emailTextView"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:backgroundTint="@color/app_settings.change_pass.edit_text_underline"
+            android:gravity="center_vertical"
+            android:text=""
+            android:textColor="@color/app_settings.change_pass.text_current_pass"
+            android:textColorHint="@color/app_settings.change_pass.hint_current_pass"
+            app:fontName="oswald.ttf" />
 
         <com.mycity4kids.widget.CustomFontEditText
             android:id="@+id/currentPasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="55dp"
+            android:layout_below="@+id/emailTextView"
             android:backgroundTint="@color/app_settings.change_pass.edit_text_underline"
             android:hint="@string/app_settings.change_pass.hint_current_pass"
             android:inputType="textPassword"
