--- a/MyCity4Kids/MyCity4Kids/res/drawable/edit_kids_info_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/edit_kids_info_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/red_drawer_selected" />
+        android:color="@color/app_red" />
 
     <padding
         android:left="1dp"
