--- a/MyCity4Kids/MyCity4Kids/res/layout/grid_view_header.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/grid_view_header.xml
@@ -3,135 +3,145 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/light_grey1"
+    android:background="@color/white"
     android:orientation="vertical">
 
-    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/quickLinkContainer2"
+    <!--<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--android:id="@+id/quickLinkContainer2"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content">-->
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="6dp"
+        android:orientation="horizontal"
+        android:weightSum="3">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/videosContainer"
+            android:layout_width="0dp"
+            android:layout_height="116dp"
             android:layout_margin="8dp"
-            android:orientation="horizontal">
+            android:layout_weight="1"
+            android:background="#f47d88"
+            android:gravity="bottom"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/videosContainer"
-                android:layout_width="100dp"
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:alpha="0.6"
+                android:background="@drawable/round_border"
+                android:src="@drawable/video_grey"
+                android:tint="@color/white" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@drawable/img_video"
-                android:gravity="bottom"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/video_grey"
-                    android:tint="@color/white" />
-
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:text="VIDEOS"
-                    android:textColor="@color/white"
-                    android:textSize="14sp"
-                    app:fontName="oswald_regular.ttf" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/storyContainer"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@drawable/img_100word"
-                android:gravity="bottom"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/shortstory_grey"
-                    android:tint="@color/white" />
-
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:text="100 WORD STORY"
-                    android:textColor="@color/white"
-                    android:textSize="14sp"
-                    app:fontName="oswald_regular.ttf" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/groupsContainer"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@drawable/img_support"
-                android:gravity="bottom"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/ic_group_icon"
-                    android:tint="@color/white" />
-
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:text="SUPPORT GROUPS"
-                    android:textColor="@color/white"
-                    android:textSize="14sp"
-                    app:fontName="oswald_regular.ttf" />
-            </LinearLayout>
-
-            <!--<LinearLayout-->
-            <!--android:layout_width="100dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_margin="8dp"-->
-            <!--android:background="#0ea2e8"-->
-            <!--android:orientation="vertical">-->
-
-            <!--<ImageView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="10dp"-->
-            <!--android:padding="10dp"-->
-            <!--android:src="@drawable/tab5_selected" />-->
-
-            <!--<com.mycity4kids.widget.CustomFontTextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginBottom="10dp"-->
-            <!--android:layout_marginTop="10dp"-->
-            <!--android:padding="10dp"-->
-            <!--android:text="Trending"-->
-            <!--android:textColor="@color/white"-->
-            <!--android:textSize="14sp"-->
-            <!--app:fontName="oswald_regular.ttf" />-->
-            <!--</LinearLayout>-->
-
+                android:layout_marginBottom="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="VIDEOS"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:fontName="oswald_regular.ttf" />
         </LinearLayout>
-    </HorizontalScrollView>
+
+        <LinearLayout
+            android:id="@+id/storyContainer"
+            android:layout_width="0dp"
+            android:layout_height="116dp"
+            android:layout_margin="6dp"
+            android:layout_weight="1"
+            android:background="#87abe8"
+            android:gravity="bottom"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:alpha="0.6"
+                android:background="@drawable/round_border"
+                android:src="@drawable/shortstory_grey"
+                android:tint="@color/white" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="100 WORD STORY"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:fontName="oswald_regular.ttf" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/groupsContainer"
+            android:layout_width="0dp"
+            android:layout_height="116dp"
+            android:layout_margin="6dp"
+            android:layout_weight="1"
+            android:background="#9994da"
+            android:gravity="bottom"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:alpha="0.6"
+                android:background="@drawable/round_border"
+                android:src="@drawable/ic_group_icon"
+                android:tint="@color/white" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="SUPPORT GROUPS"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:fontName="oswald_regular.ttf" />
+        </LinearLayout>
+
+        <!--<LinearLayout-->
+        <!--android:layout_width="100dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_margin="8dp"-->
+        <!--android:background="#0ea2e8"-->
+        <!--android:orientation="vertical">-->
+
+        <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:padding="10dp"-->
+        <!--android:src="@drawable/tab5_selected" />-->
+
+        <!--<com.mycity4kids.widget.CustomFontTextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="10dp"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:padding="10dp"-->
+        <!--android:text="Trending"-->
+        <!--android:textColor="@color/white"-->
+        <!--android:textSize="14sp"-->
+        <!--app:fontName="oswald_regular.ttf" />-->
+        <!--</LinearLayout>-->
+
+    </LinearLayout>
+    <!--</HorizontalScrollView>-->
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/exploreCategoriesLabel"
