--- a/MyCity4Kids/MyCity4Kids/res/layout/suggested_topic_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/suggested_topic_list_item.xml
@@ -44,11 +44,11 @@
         android:textSize="13sp"
         app:fontName="open_sans.ttf" />
 
-    <View
-        android:id="@+id/view10"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/light_grey1" />
+    <!--<View-->
+    <!--android:id="@+id/view10"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="1dp"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:background="@color/light_grey1" />-->
 
 </RelativeLayout>
