--- a/MyCity4Kids/MyCity4Kids/res/layout/all_videos_listing_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/all_videos_listing_activity.xml
@@ -49,8 +49,8 @@
         android:elevation="3dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:tabIndicatorColor="@color/home.trending.tabbar_indicator"
-        app:tabIndicatorHeight="3dp"
+        app:tabIndicatorColor="@color/app_red"
+        app:tabIndicatorHeight="2dp"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="@color/home.trending.tabbar_text"
         app:tabTextAppearance="@style/CustomTabText"
