--- a/MyCity4Kids/MyCity4Kids/res/layout/article_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_listing_item.xml
@@ -148,6 +148,7 @@
                     android:paddingRight="10dp"
                     android:paddingTop="15dp"
                     android:src="@drawable/ic_bookmark"
+                    android:tint="@color/app_red"
                     android:visibility="visible" />
 
                 <ImageView
