--- a/MyCity4Kids/MyCity4Kids/res/layout/facebook_ad_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/facebook_ad_list_item.xml
@@ -263,6 +263,7 @@
                         android:paddingRight="10dp"
                         android:paddingTop="15dp"
                         android:src="@drawable/ic_bookmark"
+                        android:tint="@color/app_red"
                         android:visibility="visible" />
 
                     <ImageView
@@ -280,6 +281,7 @@
                         android:paddingRight="10dp"
                         android:paddingTop="15dp"
                         android:src="@drawable/ic_watch"
+                        android:tint="@color/app_red"
                         android:visibility="invisible" />
                 </RelativeLayout>
 
