--- a/MyCity4Kids/MyCity4Kids/res/layout/trending_list_header_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/trending_list_header_item.xml
@@ -246,6 +246,7 @@
                         android:paddingRight="10dp"
                         android:paddingTop="15dp"
                         android:src="@drawable/ic_bookmark"
+                        android:tint="@color/app_red"
                         android:visibility="visible" />
 
                     <ImageView
@@ -263,6 +264,7 @@
                         android:paddingRight="10dp"
                         android:paddingTop="15dp"
                         android:src="@drawable/ic_watch"
+                        android:tint="@color/app_red"
                         android:visibility="invisible" />
                 </RelativeLayout>
 
