--- a/MyCity4Kids/MyCity4Kids/res/drawable/follow_topic_author_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/follow_topic_author_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="#507cbe" />
+        android:color="@color/app_red" />
 
     <solid android:color="@color/white_color" />
 
