--- a/MyCity4Kids/MyCity4Kids/res/drawable/quick_links_btn_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/quick_links_btn_bg.xml
@@ -3,7 +3,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#507cbe" />
+        android:color="@color/app_red" />
 
     <solid android:color="@color/white" />
 
