--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home_new.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home_new.xml
@@ -13,8 +13,8 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:tabGravity="fill"
-        app:tabIndicatorColor="@color/home.trending.tabbar_indicator"
-        app:tabIndicatorHeight="3dp"
+        app:tabIndicatorColor="@color/app_red"
+        app:tabIndicatorHeight="2dp"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="@color/home.trending.tabbar_text"
         app:tabTextAppearance="@style/CustomTabText"
