--- a/MyCity4Kids/MyCity4Kids/res/layout/add_ss_comment_reply_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_ss_comment_reply_fragment.xml
@@ -54,7 +54,7 @@
                 android:layout_marginRight="4dp"
                 android:padding="10dp"
                 android:text="@string/editor.publish"
-                android:textColor="@color/short_story.blue"
+                android:textColor="@color/app_red"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
         </RelativeLayout>
