--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_container.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_container.xml
@@ -42,6 +42,7 @@
                 android:layout_marginRight="5dp"
                 android:padding="12dp"
                 android:src="@drawable/ic_play_tts"
+                android:tint="@color/app_red"
                 android:visibility="gone" />
 
         </RelativeLayout>
@@ -72,13 +73,13 @@
         android:layout_below="@+id/anim_toolbar" />
 
     <!--<ImageView-->
-        <!--android:id="@+id/coachmarksImageView"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:elevation="5dp"-->
-        <!--android:scaleType="fitXY"-->
-        <!--android:src="@drawable/coachmark_article"-->
-        <!--android:visibility="gone" />-->
+    <!--android:id="@+id/coachmarksImageView"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:elevation="5dp"-->
+    <!--android:scaleType="fitXY"-->
+    <!--android:src="@drawable/coachmark_article"-->
+    <!--android:visibility="gone" />-->
 
     <RelativeLayout
         android:id="@+id/guideOverlay"
