--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
@@ -164,7 +164,7 @@
                 android:layout_marginTop="10dp"
                 android:padding="10dp"
                 android:text="@string/ad.follow_author"
-                android:textColor="@color/ad.follow_following_text"
+                android:textColor="@color/app_red"
                 android:textSize="14sp"
                 app:fontName="oswald_regular.ttf" />
 
@@ -205,7 +205,7 @@
                 android:layout_alignTop="@+id/writeArticleImageView"
                 android:gravity="center"
                 android:text="@string/ad.write_blog"
-                android:textColor="#507cbe"
+                android:textColor="@color/app_red"
                 android:textSize="24sp" />
 
             <RelativeLayout
@@ -271,7 +271,7 @@
                         android:paddingRight="15dp"
                         android:paddingTop="6dp"
                         android:text="@string/ad.view_all_tags.text"
-                        android:textColor="@color/ad.tags.text"
+                        android:textColor="@color/app_red"
                         android:textSize="14sp"
                         app:fontName="oswald_regular.ttf" />
                 </RelativeLayout>
@@ -532,7 +532,7 @@
                 android:paddingRight="10dp"
                 android:paddingTop="12dp"
                 android:text="@string/ad.comments.view_comment"
-                android:textColor="@color/follower_following_list.following_label"
+                android:textColor="@color/app_red"
                 android:textSize="16sp"
                 app:fontName="oswald_regular.ttf" />
 
@@ -698,7 +698,7 @@
                     android:drawableTop="@drawable/ic_facebook"
                     android:gravity="center"
                     android:text="@string/ad.bottom_bar.facebook"
-                    android:textColor="@color/ad.bottom_bar.items"
+                    android:textColor="@color/app_red"
                     android:textSize="11sp"
                     app:fontName="oswald.ttf" />
 
@@ -710,7 +710,7 @@
                     android:drawableTop="@drawable/ic_whats_app"
                     android:gravity="center"
                     android:text="@string/ad.bottom_bar.whatsapp"
-                    android:textColor="@color/ad.bottom_bar.items"
+                    android:textColor="@color/app_red"
                     android:textSize="11sp"
                     app:fontName="oswald.ttf" />
 
@@ -719,11 +719,11 @@
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
-                    android:drawableTint="#507cbe"
+                    android:drawableTint="@color/app_red"
                     android:drawableTop="@drawable/ic_share_white"
                     android:gravity="center"
                     android:text="@string/ad.bottom_bar.generic_share"
-                    android:textColor="@color/ad.bottom_bar.items"
+                    android:textColor="@color/app_red"
                     android:textSize="11sp"
                     app:fontName="oswald.ttf" />
 
@@ -731,11 +731,11 @@
                     android:id="@+id/bookmarkTextView"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
-                    android:layout_weight="1"
+                    android:layout_weight="1"                  
                     android:drawableTop="@drawable/ic_bookmark"
                     android:gravity="center"
                     android:text="@string/ad.bottom_bar.bookmark"
-                    android:textColor="@color/ad.bottom_bar.items"
+                    android:textColor="@color/app_red"
                     android:textSize="11sp"
                     app:fontName="oswald.ttf" />
 
@@ -747,7 +747,7 @@
                     android:drawableTop="@drawable/ic_recommend"
                     android:gravity="center"
                     android:text="@string/ad.bottom_bar.like"
-                    android:textColor="@color/ad.bottom_bar.items"
+                    android:textColor="@color/app_red"
                     android:textSize="11sp"
                     app:fontName="oswald.ttf" />
 
