--- a/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
@@ -74,7 +74,7 @@
             android:layout_below="@+id/storyBodyTextView"
             android:padding="14dp"
             android:text="Reena Goyal"
-            android:textColor="@color/short_story.blue"
+            android:textColor="@color/app_red"
             android:textSize="16sp"
             app:fontName="georgia.ttf" />
 
@@ -104,7 +104,7 @@
                 android:paddingRight="8dp"
                 android:paddingTop="12dp"
                 android:src="@drawable/ic_facebook"
-                android:tint="@color/short_story.blue" />
+                android:tint="@color/app_red" />
 
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/whatsappShareImageView"
@@ -119,7 +119,7 @@
                 android:paddingRight="8dp"
                 android:paddingTop="12dp"
                 android:src="@drawable/ic_whats_app"
-                android:tint="@color/short_story.blue" />
+                android:tint="@color/app_red" />
 
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/instagramShareImageView"
@@ -134,7 +134,7 @@
                 android:paddingRight="8dp"
                 android:paddingTop="12dp"
                 android:src="@drawable/ic_insta"
-                android:tint="@color/short_story.blue" />
+                android:tint="@color/app_red" />
 
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/genericShareImageView"
@@ -149,7 +149,7 @@
                 android:paddingRight="8dp"
                 android:paddingTop="12dp"
                 android:src="@drawable/ic_share_white"
-                android:tint="@color/short_story.blue" />
+                android:tint="@color/app_red" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -186,7 +186,8 @@
                         android:paddingLeft="5dp"
                         android:paddingRight="4dp"
                         android:paddingTop="12dp"
-                        android:src="@drawable/ic_ss_like" />
+                        android:src="@drawable/ic_ss_like"
+                        android:tint="@color/app_red" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -214,7 +215,8 @@
                         android:paddingLeft="5dp"
                         android:paddingRight="4dp"
                         android:paddingTop="12dp"
-                        android:src="@drawable/ic_ss_comment" />
+                        android:src="@drawable/ic_ss_comment"
+                        android:tint="@color/app_red" />
                 </LinearLayout>
 
             </LinearLayout>
