--- a/MyCity4Kids/MyCity4Kids/res/layout/sub_sub_topic_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/sub_sub_topic_item.xml
@@ -14,6 +14,6 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="One"
-        android:textColor="@color/topic_selector_text"
+        android:textColor="@color/app_red"
         app:fontName="oswald_regular.ttf" />
 </LinearLayout>
