--- a/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
@@ -49,7 +49,7 @@
             android:elevation="3dp"
             android:minHeight="?attr/actionBarSize"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:tabIndicatorColor="@color/topic_articles.tabbar_indicator"
+            app:tabIndicatorColor="@color/app_red"
             app:tabIndicatorHeight="2dp"
             app:tabMode="scrollable"
             app:tabSelectedTextColor="@color/topic_articles.tabbar_text"
