--- a/MyCity4Kids/MyCity4Kids/res/drawable/get_started_button_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/get_started_button_bg.xml
@@ -2,15 +2,15 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/onboarding.get_started_bg" />
+        android:color="@color/app_red" />
 
-    <solid android:color="@color/onboarding.get_started_bg" />
+    <solid android:color="@color/app_red" />
 
     <padding
         android:left="1dp"
         android:right="1dp"
         android:top="1dp" />
 
-    <corners android:radius="20dp" />
+    <corners android:radius="24dp" />
 
 </shape>
