--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:background="@color/app_blue"
+            android:background="@color/app_red"
             android:elevation="5dp"
             android:padding="10dp"
             android:visibility="gone">
@@ -28,7 +28,8 @@
                 android:layout_centerVertical="true"
                 android:background="@drawable/bookmark_icon_round_bg"
                 android:padding="10dp"
-                android:src="@drawable/ic_bookmark" />
+                android:src="@drawable/ic_bookmark"
+                android:tint="@color/app_red" />
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/messageTextView"
@@ -39,7 +40,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_toLeftOf="@+id/viewBookmarkedArticleTextView"
                 android:layout_toRightOf="@+id/bookmarkImageView"
-                android:text="your article is successfully bookmarked in account page"
+                android:text="Your article is successfully bookmarked."
                 android:textColor="@color/white"
                 app:fontName="oswald_regular.ttf" />
 
