--- a/MyCity4Kids/MyCity4Kids/res/layout/explore_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/explore_fragment.xml
@@ -20,13 +20,13 @@
             android:layout_height="wrap_content"
             android:drawablePadding="4dp"
             android:drawableRight="@drawable/ic_down_arrow"
-            android:drawableTint="#507cbe"
+            android:drawableTint="@color/app_red"
             android:paddingBottom="12dp"
             android:paddingLeft="20dp"
             android:paddingRight="30dp"
             android:paddingTop="12dp"
             android:text="City Name"
-            android:textColor="@color/explore.city"
+            android:textColor="@color/app_red"
             android:textSize="18sp"
             app:fontName="oswald_regular.ttf" />
     </RelativeLayout>
