--- a/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
@@ -74,7 +74,7 @@
             android:layout_below="@+id/storyBodyTextView"
             android:padding="14dp"
             android:text="Reena Goyal"
-            android:textColor="@color/app_red"
+            android:textColor="@color/app_blue"
             android:textSize="16sp"
             app:fontName="georgia.ttf" />
 
