--- a/MyCity4Kids/MyCity4Kids/res/layout/signup_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/signup_fragment.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     android:background="@drawable/signin_signup">
 
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/trans_gray" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -95,6 +102,7 @@
             android:gravity="center"
             android:orientation="horizontal">
 
+
             <com.mycity4kids.widget.CustomFontTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -110,9 +118,11 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/sign_up.sign_in_btn"
-                android:textColor="@color/sign_up.sign_in_btn"
+                android:textColor="@color/sign_in_out_text_red_color"
                 android:textSize="13sp"
                 app:fontName="open_sans.ttf" />
+
+
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
